- replaced sun misc Base64Encode/Decoder with the apache commons once to resolve the BASE64Decoder is internal proprietary API ... warning